Small updates to modernize codebase; remove RECIPES registry for hard-coded recipes