@@ -168,7 +168,7 @@ public abstract class AbstractNautilusEntity extends TameableEntity implements C
 
     @Override
     public boolean shouldSimulateMovement() {
-        return getFlag(EntityFlag.SADDLED) && !this.passengers.isEmpty() && this.passengers.get(0) == session.getPlayerEntity();
+        return getFlag(EntityFlag.SADDLED) && !this.passengers.isEmpty() && this.passengers.getFirst() == session.getPlayerEntity();
     }
 
     @Override
