@@ -81,7 +81,7 @@ public class Block {
         this.destroyTime = builder.destroyTime;
         this.pushReaction = builder.pushReaction;
 
-        BlockState firstState = builder.build(this).get(0);
+        BlockState firstState = builder.build(this).getFirst();
         this.propertyKeys = builder.propertyKeys; // Ensure this is not null before iterating over states
         this.defaultState = setDefaultState(firstState);
     }
